; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-r7301.c_rtc7301_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-r7301.c_rtc7301_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtc7301_priv = type { i32 }

@RTC7301_TIMER_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtc7301_priv*)* @rtc7301_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtc7301_init(%struct.rtc7301_priv* %0) #0 {
  %2 = alloca %struct.rtc7301_priv*, align 8
  %3 = alloca i64, align 8
  store %struct.rtc7301_priv* %0, %struct.rtc7301_priv** %2, align 8
  %4 = load %struct.rtc7301_priv*, %struct.rtc7301_priv** %2, align 8
  %5 = getelementptr inbounds %struct.rtc7301_priv, %struct.rtc7301_priv* %4, i32 0, i32 0
  %6 = load i64, i64* %3, align 8
  %7 = call i32 @spin_lock_irqsave(i32* %5, i64 %6)
  %8 = load %struct.rtc7301_priv*, %struct.rtc7301_priv** %2, align 8
  %9 = call i32 @rtc7301_select_bank(%struct.rtc7301_priv* %8, i32 2)
  %10 = load %struct.rtc7301_priv*, %struct.rtc7301_priv** %2, align 8
  %11 = load i32, i32* @RTC7301_TIMER_CONTROL, align 4
  %12 = call i32 @rtc7301_write(%struct.rtc7301_priv* %10, i32 0, i32 %11)
  %13 = load %struct.rtc7301_priv*, %struct.rtc7301_priv** %2, align 8
  %14 = getelementptr inbounds %struct.rtc7301_priv, %struct.rtc7301_priv* %13, i32 0, i32 0
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @spin_unlock_irqrestore(i32* %14, i64 %15)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @rtc7301_select_bank(%struct.rtc7301_priv*, i32) #1

declare dso_local i32 @rtc7301_write(%struct.rtc7301_priv*, i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
